--- a/about.html
+++ b/about.html
@@ -7,39 +7,23 @@
 
     
     <link rel="stylesheet" href="style.css">
-    <title>About us</title>
+    <title>Off the Grids</title>
 </head>
 <body>
-    <div class="flex items-center justify-center align-center text-center flex-row py-2">
-        <div class="uppernav">
-            hellow world
-       </div>
-    </div>
 
-    <div class="banner1">
-        <nav class="flex justify-between ">
+    <div class="banner1-a">
+        <nav class="flex justify-between flex-wrap gap-10 ">
             <img class="flex items-center justify-center py-2 px-2" src="./public/logo.png">
-            <div class=" flex row justify-center items-center gap-10 py-2 px-2 text-white">
-                <div class=" text-center  h-8 w-20 rounded-full text-black bg-white">Home</div>
-                <div class="">About Us</div>
+            <div class=" flex flex-wrap row justify-center items-center gap-10 py-2 px-2 text-black">
+                <div>Home</div>
+                <div class=" text-center  h-8 w-20 rounded-full text-black bg-green">About Us</div>
                 <div>Services</div>
                 <div>Product & Solutions</div>
                 <div class="flex gap-4">Menu <img src="./public/menu_icons.svg"></div>
             </div>
         </nav>
-        <div class=" flex items-center justify-center">
-            <div class="subbanner1 flex flex-col items-center justify-center gap-10 text-white py-2 px-5">
-                <div class="text-white font-avenir text-6xl">Welcome to <span class="title-1">Off the Grids</span></div>
-                <p>Your Green Journey starts here......</p>
-                <p class="text-center">Your trusted Installer and Distributor of quality Solar 
-                    brands and products with end-to-end Client service excellence 
-                    at the heart of our business.
-                </p>
-                
-                <p>A positive change for the planet and your pocket</p>
-                <button>Get a quotation</button>
-            </div>
-        </div>
     </div>
+
+
 </body>
 </html>
